--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "^1.0.2",
+    "js-yaml": "^4.1.0",
+    "katex": "^0.16.22",
+    "mdast-util-to-string": "^4.0.0",
     "mdx-bundler": "^8.0.0",
     "next": "^13.5.6",
     "next-themes": "^0.0.14",
@@ -51,6 +54,7 @@
     "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
     "tailwindcss": "^3.0.23",
+    "tslib": "^2.8.1",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
@@ -84,5 +88,6 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538"
 }
